mutants.out/log/src__proto__single__ent__progress.rs_line_59_col_9.log

*** src/proto/single/ent/progress.rs:59:9: replace ProgressUpdateBuilder::build -> ProgressUpdate with Default::default()

*** mutation diff:
--- src/proto/single/ent/progress.rs
+++ replace ProgressUpdateBuilder::build -> ProgressUpdate with Default::default()
@@ -51,18 +51,17 @@
     pub fn builder(jid: JobId) -> ProgressUpdateBuilder {
         ProgressUpdateBuilder::new(jid)
     }
 }
 
 impl ProgressUpdateBuilder {
     /// Builds an instance of ProgressUpdate.
     pub fn build(&self) -> ProgressUpdate {
-        self.try_build()
-            .expect("Only jid is required, and it is set by all constructors.")
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     /// Create a new instance of `JobBuilder`
     pub fn new(jid: JobId) -> ProgressUpdateBuilder {
         ProgressUpdateBuilder {
             jid: Some(jid),
             ..ProgressUpdateBuilder::create_empty()
         }


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
    Finished dev [unoptimized + debuginfo] target(s) in 0.05s

*** result: Success

*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml --locked --all-features --all-targets
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0277]: the trait bound `ProgressUpdate: Default` is not satisfied
  --> src/proto/single/ent/progress.rs:59:9
   |
59 |         Default::default() /* ~ changed by cargo-mutants ~ */
   |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `ProgressUpdate`
   |
help: consider annotating `ProgressUpdate` with `#[derive(Default)]`
   |
17 + #[derive(Default)]
18 | pub struct ProgressUpdate {
   |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
